@@ -1,3 +1,8 @@
+Thu Nov 15 01:55:15 GMT 2012  Olly Betts <olly@survex.com>
+
+	* bin/xapian-replicate.cc: Add --quiet option to xapian-replicate, and
+	  be a little more verbose by default.
+
 Thu Nov 15 01:54:14 GMT 2012  Olly Betts <olly@survex.com>
 
 	* bin/xapian-replicate.cc: xapian-replicate --force-copy now only
